        **                                         **
        *********************************************

NEW FEATURES

    o   unique and duplicated methods now work on unkeyed tables (comparing
        all columns in that case) and both now respect machine tolerance for
        double precision columns, implementing FR#1626 and fixing bug #1632.
        The help page has been updated accordingly. Thanks to questions by
        Iterator and comments by Allan Engelhardt on Stack Overflow.
    

BUG FIXES

    o   Assigning to a column variable using <- or = in j now
        works (creating a local copy within j), rather than
        persisting from group to group and sometimes causing a crash.
        Non column variables still persist from group to group; e.g.,
        a group counter. This fixes the remainder of #1624 thanks to
        Steve Lianoglou for reporting.
        
    o   A crash bug is fixed when j returns a (strictly) NULL column next
        to a non-empty column, #1633. This case was anticipated and coded
        for but an errant LENGTH() should have been length(). Thanks
        to Dennis Murphy for reporting. 


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.1   **
        **                                         **
        *********************************************

BUG FIXES

    o   .SD is now locked, partially fixing #1624. It was never
        the intention to allow assignment to .SD. Take a 'copy(.SD)'
        first if needed. Now documented in ?data.table and new FAQ 4.5
        including example. Thanks to Steve Lianoglou for reporting.

    o   := now works with a logical i subset; e.g.,
            DT[x==1,y:=x]
        Thanks to Muhammad Waliji for reporting.
        
USER VISIBLE CHANGES

    o   Error message "column <name> of i is not internally type integer"